fix page shifting and footer font

--- a/History_Trails/src/main/resources/static/myStyle.css
+++ b/History_Trails/src/main/resources/static/myStyle.css
@@ -4,7 +4,7 @@ body {
     color: #333;
     margin: 0;
 }
-
+* {box-sizing: border-box;}
 img {
     max-width: 100%;
     height: auto;
