--- a/History_Trails/src/main/resources/static/navbar.css
+++ b/History_Trails/src/main/resources/static/navbar.css
@@ -95,7 +95,11 @@
     bottom: 0;
 }
 
-
+.footer h3{
+    text-align: left;
+    font-size: 30px;
+    color: white;
+}
 .footer-row{
     display: flex;
     flex-wrap: wrap;
